refact: concert,venue,seat 파트 리팩토링 진행 중